<resources>
    <string name="app_name">DoitMission07</string>
    <string name="go_menu">메뉴로</string>
    <string name="go_login">로그인으로</string>
    <string name="menu">메인메뉴</string>
    <string name="customer">고객 관리</string>
    <string name="sales">매출 관리</string>
    <string name="product">상품 관리</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="do_login">로그인하기</string>
</resources>