<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">

    <TextView
        android:id="@+id/textViewC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/customer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.1"
        app:layout_constraintHorizontal_bias="0.1"/>

    <LinearLayout
        android:id="@+id/linearLayoutC"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewC"
        app:layout_constraintVertical_weight="0.9">

        <android.widget.Button
            android:id="@+id/btnGoMenuC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_menu"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <android.widget.Button
            android:id="@+id/btnGoLoginC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_login"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>